<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginFragment">

    <TextView
        android:id="@+id/titleMasuk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/login"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        app:layout_constraintTop_toBottomOf="@id/titleMasuk" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:hint="@string/email"
        app:helperText="@string/exampleEmail"
        app:layout_constraintTop_toBottomOf="@id/divider">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailedittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--    <TextView-->
    <!--        android:id="@+id/contohEmail"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:fontFamily="@font/poppins"-->
    <!--        android:text="@string/contohEmail"-->
    <!--        android:textSize="12sp"-->
    <!--        android:layout_marginStart="32dp"-->
    <!--        android:layout_marginTop="2dp"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/textFieldEmail" />-->


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:hint="@string/password"
        app:helperText="@string/examplePassword"
        app:layout_constraintTop_toBottomOf="@id/textFieldEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordedittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/buttonMasuk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/login"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldPassword" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/buttonMasuk"
        app:layout_constraintEnd_toEndOf="@+id/buttonMasuk"
        app:layout_constraintStart_toStartOf="@+id/buttonMasuk"
        app:layout_constraintTop_toTopOf="@+id/buttonMasuk"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>